--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shoutcut icon" href="../ToDo/img/favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" rel="stylesheet" />
     <title>ToDo</title>
 </head>
@@ -18,9 +19,9 @@
         <main class="main">
             <div class="main__contener contener">
                 <ul class="main__items items">
-                    <li class="items__item" id="empty">
+                    <!-- <li class="items__item" id="empty">
                         <h2 class="items__text">Список задач пуст.</h2>
-                    </li>
+                    </li> -->
                     <!-- <li class="items__item items__item_task">
                         <span class="items__tasck">купить хлеб</span>
                         <div class="items__info">
