--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <div class="wraper">
         <header class="header">
             <div class="header__contener contener">
+                <nav class="nav">
+                    <ul class="nav__list">
+                        <li class="nav__item"><a href="deltasks.html" class="nav__link">Завершенные задачи</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
+                    </ul>
+                </nav>
                 <h1 class="header__title">Список задач</h1>
             </div>
         </header>
@@ -42,7 +48,7 @@
                     </li> -->
                 </ul>
                 <div class="addtask__body">
-                    <div class="addtask__title">Добавить новую задчу</div>
+                    <div class="addtask__title">Добавить новую задачу</div>
                     <div class="addtask__form">
                         <form class="form">
                             <div class="form__group">
