--- a/deltasks.html
+++ b/deltasks.html
@@ -19,10 +19,28 @@
             <div class="header__contener contener">
                 <nav class="nav">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="../ToDo-1/deltasks.html" class="nav__link">Завершенные задачи</a>
-                        </li>
-                        <li class="nav__item"><a href="../ToDo-1/index.html" class="nav__link">О нас</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link activ">Главная</a></li>
+                        <li class="nav__item"><a href="deltasks.html" class="nav__link">Завершенные задачи</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
                     </ul>
+                    <div class="burger">
+                        <span class="burger__sp1"></span>
+                        <span class="burger__sp2"></span>
+                        <span class="burger__sp3"></span>
+                    </div>
+                    <div class="popup">
+                        <ul class="popup__list">
+                            <li class="popup__item">
+                                <a href="../ToDo-1/index.html" class="popup__link">Главная</a>
+                            </li>
+                            <li class="popup__item">
+                                <a href="deltasks.html" class="popup__link">Завершенные задачи</a>
+                            </li>
+                            <li class="popup__item">
+                                <a href="#" class="popup__link">О нас</a>
+                            </li>
+                        </ul>
+                    </div>
                 </nav>
                 <!-- <h1 class="header__title">Список задач</h1> -->
             </div>
@@ -42,6 +60,7 @@
     </div>
     <!-- <script src="js/main.js"></script>   -->
     <script src="js/deltasks.js"></script>
+    <script src="js/nav.js"></script>
 </body>
 
 </html>
