--- a/index.html
+++ b/index.html
@@ -1,24 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shoutcut icon" href="../ToDo/img/favicon (1).ico" />
-    <link href="https://fonts.googleapis.com/css?family=Poppins:regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css?family=Poppins:regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
+        rel="stylesheet" />
     <title>ToDo</title>
 </head>
+
 <body>
     <div class="wraper">
         <header class="header">
             <div class="header__contener contener">
                 <nav class="nav">
+                    <div class="logo">
+                        <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="35px"
+                            height="35px" viewBox="0 0 1280.000000 1206.000000"
+                            preserveAspectRatio="xMidYMid meet">
+                            <metadata>
+                                Created by potrace 1.15, written by Peter Selinger 2001-2017
+                            </metadata>
+                            <g transform="translate(0.000000,1206.000000) scale(0.100000,-0.100000)" fill="#ffffff"
+                                stroke="none">
+                                <path d="M5828 11600 c-282 -250 -1418 -1256 -2523 -2235 -1106 -978 -2165
+-1917 -2355 -2085 -190 -168 -460 -407 -600 -530 -140 -124 -276 -245 -302
+-270 l-48 -45 330 -370 c181 -203 336 -369 343 -369 8 1 603 521 1323 1156
+3778 3332 4388 3868 4395 3866 4 -2 470 -413 1036 -914 565 -501 1842 -1631
+2836 -2512 994 -881 1812 -1602 1817 -1602 5 0 12 5 15 10 5 8 11 7 21 -1 19
+-15 -10 -45 339 351 153 173 293 331 312 351 l34 36 -838 739 c-461 407 -1544
+1363 -2408 2124 -863 762 -1919 1693 -2347 2070 l-776 685 -45 0 -45 0 -514
+-455z" />
+                                <path d="M5707 9301 c-364 -322 -1370 -1213 -2235 -1979 l-1572 -1393 2 -2872
+3 -2872 22 -41 c12 -23 41 -58 64 -77 83 -72 -24 -67 1561 -67 l1428 0 2 1273
+c3 1266 3 1272 24 1317 26 58 76 108 134 134 45 21 52 21 1224 24 1304 3 1248
+5 1322 -60 52 -46 81 -97 93 -163 8 -40 11 -454 11 -1292 l0 -1233 1484 2
+1485 3 30 29 c17 16 45 63 63 105 l33 76 2 2860 2 2860 -2240 1975 c-1270
+1120 -2249 1976 -2260 1976 -13 1 -247 -200 -682 -585z" />
+                            </g>
+                        </svg>
+                    </div>
                     <ul class="nav__list">
+                        <li class="nav__item"><a href="#" class="nav__link activ">Главная</a></li>
                         <li class="nav__item"><a href="deltasks.html" class="nav__link">Завершенные задачи</a></li>
                         <li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
                     </ul>
+                    <div class="burger">
+                        <span class="burger__sp1"></span>
+                        <span class="burger__sp2"></span>
+                        <span class="burger__sp3"></span>
+                    </div>
+                    <div class="popup">
+                        <ul class="popup__list">
+                            <li class="popup__item">
+                                <a href="../ToDo-1/index.html" class="popup__link">Главная</a>
+                            </li>
+                            <li class="popup__item">
+                                <a href="deltasks.html" class="popup__link">Завершенные задачи</a>
+                            </li>
+                            <li class="popup__item">
+                                <a href="#" class="popup__link">О нас</a>
+                            </li>
+                        </ul>
+                    </div>
                 </nav>
+
                 <h1 class="header__title">Список задач</h1>
             </div>
         </header>
@@ -52,7 +102,7 @@
                     <div class="addtask__form">
                         <form class="form">
                             <div class="form__group">
-                                <input type="text" class="form__control"  placeholder="Текст задачи" value="">
+                                <input type="text" class="form__control" placeholder="Текст задачи" value="">
                                 <small class="form__text">Что нужно сделать и какой результат получить</small>
                             </div>
                             <button type="submit" class="form__button">Добавить</button>
@@ -63,6 +113,8 @@
         </main>
         <footer class="footer"></footer>
     </div>
-  <script src="js/main.js"></script>  
+    <script src="js/main.js"></script>
+    <script src="js/nav.js"></script>
 </body>
+
 </html>
