--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
     <link
         href="https://fonts.googleapis.com/css?family=Poppins:regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
         rel="stylesheet" />
-    <title>delete tasks</title>
+    <title>about</title>
 </head>
 
-<body>
+<body class="about">
     <div class="wraper">
         <header class="header">
             <div class="header__contener contener">
@@ -46,8 +46,8 @@ c3 1266 3 1272 24 1317 26 58 76 108 134 134 45 21 52 21 1224 24 1304 3 1248
                     </div>
                     <ul class="nav__list">
                         <li class="nav__item"><a href="index.html" class="nav__link">Главная</a></li>
-                        <li class="nav__item"><a href="deltasks.html" class="nav__link activ">Завершенные задачи</a></li>
-                        <li class="nav__item"><a href="about.html" class="nav__link">О нас</a></li>
+                        <li class="nav__item"><a href="deltasks.html" class="nav__link">Завершенные задачи</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link activ">О нас</a></li>
                     </ul>
                     <div class="burger">
                         <span class="burger__sp1"></span>
@@ -63,7 +63,7 @@ c3 1266 3 1272 24 1317 26 58 76 108 134 134 45 21 52 21 1224 24 1304 3 1248
                                 <a href="deltasks.html" class="popup__link">Завершенные задачи</a>
                             </li>
                             <li class="popup__item">
-                                <a href="about.html" class="popup__link">О нас</a>
+                                <a href="#" class="popup__link">О нас</a>
                             </li>
                         </ul>
                     </div>
@@ -73,12 +73,10 @@ c3 1266 3 1272 24 1317 26 58 76 108 134 134 45 21 52 21 1224 24 1304 3 1248
         </header>
         <main class="main">
             <div class="main__contener contener">
-                <ul class="main__items items">
-                    <!-- <li class="items__item" id="empty">
-                        <h2 class="items__text">Список удаленных задач пуст.</h2>
-                    </li> -->
-
-                </ul>
+               <div class="contakt">
+                   <div class="contakt__text">Наши контакты</div>
+                   <a class="contakt__mail" href="mailto:webdevel2022@mail.ru">webdevel2022@mail.ru</a>
+               </div>
 
             </div>
         </main>
