--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#" class="nav__link activ">Главная</a></li>
                         <li class="nav__item"><a href="deltasks.html" class="nav__link">Завершенные задачи</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
+                        <li class="nav__item"><a href="about.html" class="nav__link">О нас</a></li>
                     </ul>
                     <div class="burger">
                         <span class="burger__sp1"></span>
@@ -40,7 +40,7 @@
                                 <a href="deltasks.html" class="popup__link">Завершенные задачи</a>
                             </li>
                             <li class="popup__item">
-                                <a href="#" class="popup__link">О нас</a>
+                                <a href="about.html" class="popup__link">О нас</a>
                             </li>
                         </ul>
                     </div>
