--- a/deltasks.html
+++ b/deltasks.html
@@ -6,7 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shoutcut icon" href="../ToDo/img/favicon (1).ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../ToDo/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../ToDo/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../ToDo/icon/favicon-16x16.png">
+    <!-- <link rel="manifest" href="../ToDo/icon/site.webmanifest"> -->
+    <link rel="mask-icon" href="../ToDo/icon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#dc36c8">
     <link
         href="https://fonts.googleapis.com/css?family=Poppins:regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
         rel="stylesheet" />
